# pbdNCDF4

./: .gitignore  ChangeLog  DESCRIPTION  INSTALL  INSTALL.win  Makeconf  NAMESPACE  README  README.md  aclocal.m4  cleanup  configure  configure.ac  configure.in  regenerate
R/: get_winnetcdf4.r  ncdf4.R  ncdf4_priv_att.R  ncdf4_priv_var.R  ncdump.r  zzz.R.in
R.par/: pncdf4.R
R.ser/: pncdf4.R
R/windows/: zzz.R
demo/: 00Index  ncread_par.r  ncwrite_par.r
inst/: CITATION
inst/doc/: pbdNCDF4-guide.Rnw
inst/doc/pbdNCDF4-include/: 01-introduction.tex  02-extra.tex
inst/doc/vignettes/: build_pdf.sh
inst/doc/vignettes/pbdNCDF4-include/: 01-acknowledgement.tex  03-collective.tex
inst/org/: aclocal.m4
man/: 00_pbdNCDF4-package.Rd  01_nc_create_par.Rd  01_nc_open_par.Rd  01_nc_var_par_access.Rd  02_ncdump.Rd  ancdf4.Rd  ancvar_put.Rd  nc_close.Rd  nc_create.Rd  nc_enddef.Rd  nc_open.Rd  nc_redef.Rd  nc_sync.Rd  ncatt_get.Rd  ncatt_put.Rd  ncdim_def.Rd  ncvar_add.Rd  ncvar_change_missval.Rd  ncvar_def.Rd  ncvar_get.Rd  ncvar_rename.Rd  print.ncdf4.Rd
src/: Makevars.in  Makevars.win  a.c  install.libs.R  ncdf.c  ncdf3.c  pncdf4.c  pncdf4.c.in
tools/: netcdf.m4  regenerate
vignettes/: build_pdf.sh  pbdNCDF4-guide.Rnw
vignettes/pbdNCDF4-include/: 01-acknowledgement.tex  01-introduction.tex  04-windows.tex  jss.cls  pbdNCDF4.bib
